fix: logo was off screen on mobile

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -517,6 +517,14 @@ video {
   margin-top: 1.5rem;
 }
 
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mt-40 {
+  margin-top: 10rem;
+}
+
 .flex {
   display: flex;
 }
@@ -527,6 +535,10 @@ video {
 
 .h-1\/2 {
   height: 50%;
+}
+
+.h-1\/3 {
+  height: 33.333333%;
 }
 
 .w-full {
